[gd_scene load_steps=5 format=3 uid="uid://bsushhob1ldsm"]

[ext_resource type="Script" uid="uid://drn5jheyi2o4k" path="res://proto_stances/ui/ani_stance_object.gd" id="1_wmxi6"]
[ext_resource type="Resource" uid="uid://byokky2obp467" path="res://proto_stances/souris.tres" id="2_2sp5f"]
[ext_resource type="Texture2D" uid="uid://dqlafeqikpj76" path="res://assets/hermy_64_64.png" id="3_y6xi3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_van5u"]
size = Vector2(68, 68)

[node name="Animals_Object" type="Node2D" node_paths=PackedStringArray("hitbox", "area")]
script = ExtResource("1_wmxi6")
sprite_text = ExtResource("2_2sp5f")
hitbox = NodePath("Area2D/CollisionShape2D")
area = NodePath("Area2D")

[node name="Choix_sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("3_y6xi3")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 18)
shape = SubResource("RectangleShape2D_van5u")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
